--- a/TicTacToe/wwwroot/TicTacTron.css
+++ b/TicTacToe/wwwroot/TicTacTron.css
@@ -41,6 +41,7 @@
         width: 2px;
     }
     100% {
+        height: 450px;
         width: 450px;
     }
 }
@@ -62,7 +63,7 @@
     padding-top: 175px;
 }
 
-.start {
+#start {
     width: 450px;
     height: 450px;
     display: block;
@@ -80,7 +81,7 @@ p {
     margin-top: 20px;
 }
 
-.board {
+#board {
     width: 450px;
     height: 450px;
     margin: auto;
@@ -150,5 +151,5 @@ p {
     animation-name: symbol-select;
     animation-duration: 1s;
     animation-fill-mode: forwards;
-    animation-play-state: running;
+    animation-play-state: paused;
 }
